# myelin8

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY-AUDIT-2026-03-19.md  marketplace.json  pyproject.toml
.claude-plugin/: plugin.json
archived/: merkle_python_reference.py
docs/: ARCHITECTURE-PROPOSAL.md  ARCHITECTURE.md  DATA-CONTRACT.md  DERIVATION-LOG.md  ENGINEERING-PROPOSAL.md  ENGRAM-V2-ARCHITECTURE.md  FAQ.md  KEY-STORAGE-GUIDE.md  MERKLE-INDEX-SPEC.md  MYELIN8-V2-ARCHITECTURE.md  SPATIAL-EXTENSION.md  WHY.md  blog-post.md
docs/governance/: AB-TESTING.md  BEST-PRACTICES.md  CLAUDE-MD-GUIDE.md  CONFIG-MAPPING.md  MAINTENANCE.md  README.md  SIEM-ANALOGY.md  SIEMPLE-AI-LICENSE  SIEMPLE-AI-README.md  STANZA-DESIGN.md  VERBOSE-PERMISSIONS.md
docs/governance/audit/: config_changes.jsonl  memory_writes.jsonl
docs/governance/claude-code/: CLAUDE.md  settings.json
docs/governance/claude-code/agents/: architect.md  reviewer.md
docs/governance/claude-code/commands/: adr.md  build-order.md  slop-check.md  start-feature.md
docs/governance/claude-code/hooks/: post-tool-use.sh  semgrep.yaml
docs/governance/claude-code/rules/: api-design.md  consistency.md  error-handling.md  security.md  testing.md  verbose-permissions.md
docs/governance/examples/: context-bundle.json  memory-lifecycle.md  precedence-resolution.md
docs/governance/templates/apps/research/: default.yaml
docs/governance/templates/apps/research/prompts/: summarize.md
docs/governance/templates/apps/soc/: default.yaml
docs/governance/templates/apps/soc/prompts/: triage.md
docs/governance/templates/environments/: dev.yaml  prod.yaml  stage.yaml
docs/governance/templates/runtime/sessions/: example-session.json
docs/governance/templates/system/: defaults.yaml  safety.yaml  tools.yaml
docs/governance/templates/users/example-user/: preferences.yaml  profile.yaml  semantic_memory.jsonl
myelin8-rs/src/: cli.rs  index.rs  ingest.rs  main.rs  mcp.rs  semantic.rs  supersession.rs
sidecar/: Cargo.toml
sidecar/src/: crypto.rs  keychain.rs  keystore.rs  main.rs  merkle.rs  simhash.rs
skills/engram/: SKILL.md
skills/myelin8/: SKILL.md
src/: __init__.py  audit.py  cli.py  compressor.py  config.py  context.py  embeddings.py  encryption.py  engine.py  envelope.py  fileutil.py  index_crypto.py  lookup_tables.py  metadata.py  pipeline.py  predictor.py  scanner.py  setup.py  spatial.py  vault.py  vector_index.py
tests/: benchmark_retrieval.py  test_activation.py  test_compressor.py  test_engine.py  test_envelope.py  test_lookup_tables.py  test_merkle.py  test_metadata.py  test_pipeline.py  test_spatial.py
