[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "engram"
version = "0.1.0"
description = "AI-agnostic tiered memory compression with optional post-quantum encryption"
requires-python = ">=3.10"
dependencies = [
    "zstandard>=0.19.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
# Minimal install without Parquet (frozen tier falls back to dict-zstd-19)
minimal = [
    "zstandard>=0.19.0",
]

[project.scripts]
engram = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
